[package]
name = "tp"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
tpio.path="io"


[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
tpio.path="io"


[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }


