[package]
name = "tpio"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
